Fixed exercise box overlap bug when window resized

--- a/src/Exercises.css
+++ b/src/Exercises.css
@@ -13,8 +13,8 @@
     width: 200px;
     height: 180px;
     box-shadow: 0px 3px 9px 0px rgba(38, 103, 255, 0.3);
-    padding: 10px;
-    margin-top: 20px;
+    padding: 5px;
+    margin: 12px 10px;
     transition: all 170ms ease-in-out;
 }
 
